updating the landing page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,28 @@
 </head>
 <body>
     tHIS IS MY CV
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab vel, corporis minima qui distinctio soluta nobis cupiditate deserunt! Reiciendis blanditiis iusto, molestias quisquam magni ex eum cupiditate assumenda animi.</p>
+
+    <div class="maindiv">
+        <nav class="navdiv">
+            <ul>
+                <li href="#main">
+                    MAIN
+                </li href="#main">
+                <li>
+                    ABOUT
+                </li>
+                <li href="#main">
+                    SERVICE
+                </li>
+                <li href="#main">
+                    CONTACT
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+
 </body>
 </html>
